{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 9,
  "lineage": "94ab8ed4-7557-f560-c942-ee6548e48344",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892182889733:internet-gateway/igw-013af369ee706e584",
            "id": "igw-013af369ee706e584",
            "owner_id": "892182889733",
            "tags": {
              "Name": "Andre-vpc"
            },
            "tags_all": {
              "Name": "Andre-vpc"
            },
            "vpc_id": "vpc-0b54a9371b62c188e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-013af369ee706e584",
            "id": "r-rtb-0e8b2bf3fb91158cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8b2bf3fb91158cc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892182889733:route-table/rtb-0e8b2bf3fb91158cc",
            "id": "rtb-0e8b2bf3fb91158cc",
            "owner_id": "892182889733",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Andre-vpc-public"
            },
            "tags_all": {
              "Name": "Andre-vpc-public"
            },
            "vpc_id": "vpc-0b54a9371b62c188e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba5f8701f0803b9",
            "route_table_id": "rtb-0e8b2bf3fb91158cc",
            "subnet_id": "subnet-0a79e8af7954cbc18"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0492f481cdaed0ae7",
            "route_table_id": "rtb-0e8b2bf3fb91158cc",
            "subnet_id": "subnet-0011746ca7f1ce7da"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892182889733:subnet/subnet-0a79e8af7954cbc18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0a79e8af7954cbc18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892182889733",
            "tags": {
              "Name": "Andre-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Andre-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0b54a9371b62c188e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892182889733:subnet/subnet-0011746ca7f1ce7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0011746ca7f1ce7da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892182889733",
            "tags": {
              "Name": "Andre-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "Andre-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0b54a9371b62c188e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892182889733:vpc/vpc-0b54a9371b62c188e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01aa781e723413f35",
            "default_route_table_id": "rtb-055cba72a29ddf270",
            "default_security_group_id": "sg-0b230999a1b4f0cdc",
            "dhcp_options_id": "dopt-0a88fffdf86cdfda3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b54a9371b62c188e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055cba72a29ddf270",
            "owner_id": "892182889733",
            "tags": {
              "Name": "Andre-vpc"
            },
            "tags_all": {
              "Name": "Andre-vpc"
            }
          }
        }
      ]
    }
  ]
}